changement titre du head, création nav pour sit Chris Landro

--- a/Blibliblou.html
+++ b/Blibliblou.html
@@ -10,7 +10,11 @@
         <h1>Bla</h1>
         <nav>
             <ul>
-                <li><a href="#">blibliblou</a></li>
+                <li><a href="#">Acceuil</a></li>
+                <li><a href="#">Vidéo</a></li>
+                <li><a href="#">Twitch</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Réseaux</a></li>
             </ul>
         </nav>
     </header>
