blibliblou erreur liste Ligne 17

--- a/Blibliblou.html
+++ b/Blibliblou.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>siteChrisLandro</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
                 <li><a href="#">Vidéo</a></li>
                 <li><a href="#">Twitch</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="#">Réseaux</a></li>
+                <li><a href="#">Réseaux</a></li
             </ul>
         </nav>
     </header>
