blibliblou erreur liste Ligne 17
relatif à blibliblou#1

--- a/Blibliblou.html
+++ b/Blibliblou.html
@@ -14,7 +14,7 @@
                 <li><a href="#">Vidéo</a></li>
                 <li><a href="#">Twitch</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="#">Réseaux</a></li>
+                <li><a href="#">Réseaux</a></li
             </ul>
         </nav>
     </header>
