Add HTML improvements:
Fixed L.17 closure issue;
Added main and footer to HTML

--- a/Blibliblou.html
+++ b/Blibliblou.html
@@ -14,9 +14,11 @@
                 <li><a href="#">Vidéo</a></li>
                 <li><a href="#">Twitch</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="#">Réseaux</a></li
+                <li><a href="#">Réseaux</a></li>
             </ul>
         </nav>
     </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
